--- a/docroot/includes/legalcode.css
+++ b/docroot/includes/legalcode.css
@@ -85,6 +85,15 @@ h3 {
     text-align: right;
     font-size: 1.1em;
 }
+#language-selector-block select {
+	background: #f3f3f3;
+	background-image: none;
+	border: 1px solid #f3f3f3;
+	border-radius: 0;
+	color: #464646;
+	font-family: source sans pro,sans-serif;
+	font-size: 1.6rem;
+}
 
 @media screen and (min-width: 768px) {
     #deed, #language-selector-block {
@@ -268,6 +277,7 @@ h3 {
     font-size: 38px;
     line-height: 1.1;
     margin: 0;
+    color: #FFF;
 }
 
 .pd #deed-license {
@@ -436,11 +446,11 @@ h3 {
     padding: 0;
 }
 
-a, a:visited {
+#deed a, #deed a:visited {
     color: #049CCF;
     text-decoration: none;
 }
-a:hover {
+#deed a:hover {
     color: #464646;
     text-decoration: underline;
 }
