--- a/docroot/includes/legalcode.css
+++ b/docroot/includes/legalcode.css
@@ -84,6 +84,11 @@ h3 {
     text-align: right;
     font-size: 1.1em;
 }
+#language-selector-block .language-selector-inner {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
 #language-selector-block select {
 	background: #f3f3f3;
 	background-image: none;
@@ -91,7 +96,7 @@ h3 {
 	border-radius: 0;
 	color: #464646;
 	font-family: source sans pro,sans-serif;
-	font-size: 1.6rem;
+	font-size: 1.1rem;
 }
 
 @media screen and (min-width: 768px) {
